# widget_last_operations

./: .gitignore  README.md  main.py  pyproject.toml
src/: bd.py  decorators.py  external_api.py  file_parser.py  generators.py  loggers.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
